# chicken-jockey

./: .gitignore  AGENTS.MD  Cargo.toml  README.md  rust_out
.github/workflows/: release-macos.yml
assets/blocks/: dirt.toml  grass.toml  leaves.toml  stone.toml
assets/import/: manifest.toml  sounds-manifest.toml
assets/music/: manifest.toml
assets/sounds/: README.md
assets/textures/: README.md
assets/tools/: wooden_pickaxe.toml
client/: Cargo.toml
client/src/: bootstrap.rs  diagnostics.rs  frame.rs  lib.rs  lighting.rs  main.rs  mesh_pipeline.rs  net.rs
client/src/systems/: audio.rs  extract.rs  extract_items.rs  gui_extract.rs  gui_items.rs  hotbar.rs  hud.rs  input.rs  interpolation.rs  inventory.rs  menu.rs  mod.rs  music.rs  net.rs  net_items.rs  particles.rs  pending_inventory.rs  present.rs  spectator.rs  ui_state.rs  zoom.rs
client/tests/: headless_pipeline.rs  sound_event_frame.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: atlas.rs  blocks.rs  environment.rs  gui.rs  items.rs  lib.rs  material_map.rs  mining_atlas.rs  packed_textures.rs  poll.rs  server.rs  texture_packer.rs  tools.rs
crates/engine-assets/src/import/: manifest.rs  mod.rs  pipeline.rs  tests.rs
crates/engine-assets/src/layouts/: cube_v1.rs  mod.rs
crates/engine-assets/src/music/: manifest.rs  mod.rs
crates/engine-assets/src/sounds/: import.rs  manifest.rs  mod.rs  registry.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: attenuation.rs  categories.rs  clip.rs  engine.rs  lib.rs  spatial.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: app.rs  commands.rs  events.rs  lib.rs  resources.rs  schedule.rs  time.rs
crates/engine-input/: Cargo.toml
crates/engine-input/src/: actions.rs  lib.rs  state.rs
crates/engine-net/: Cargo.toml
crates/engine-net/src/: cert.rs  codec.rs  lib.rs  messages.rs  transport.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: camera.rs  compute_mesh.rs  compute_mesh.wgsl  extract.rs  hud.rs  humanoid_pose.rs  lib.rs  lighting.rs  lighting_shared.wgsl  mesh.rs  mining_overlay.rs  mining_overlay.wgsl  pipeline.rs  post.rs  post.wgsl  render_passes.rs  render_submit.rs  renderer.rs  runtime.rs  screen_text.rs  shader.wgsl  shader_source.rs  sky.rs  sky.wgsl  voxel.wgsl  world_mesh.rs
crates/engine-render/src/dropped_items/: mesh.rs  mod.rs  pipeline.rs  tools.wgsl
crates/engine-render/src/gui/: frame.rs  gui.wgsl  mod.rs
crates/engine-render/src/particles/: mod.rs  particles.wgsl  pipeline.rs  system.rs
crates/engine-world/: Cargo.toml
crates/engine-world/src/: svo.rs
crates/game/: Cargo.toml
crates/game/src/: components.rs  day_night.rs  events.rs  input.rs  inventory.rs  lib.rs  mining.rs  mode.rs  movement.rs  play_mode.rs  plugin.rs  simulation.rs  sound.rs  voxel_raycast.rs  wire.rs  world_items.rs
crates/game/src/movement/: minecraft.rs  mod.rs  spectator.rs
crates/game/src/systems/: block_interaction.rs  block_mining.rs  chicken.rs  day_night.rs  held_tool.rs  mod.rs  mount.rs  mutation.rs  player.rs  player_animation.rs  terrain.rs  world_init.rs
crates/game/src/systems/items/: commands.rs  merge.rs  mod.rs  motion.rs  pickup.rs  player_drop.rs  spawn.rs
crates/game/src/systems/physics/: collision.rs
docs/: design-doc.md  implementation-plan.md
scripts/: diagnose-client.sh  package-macos.sh  verify-client-window.sh
server/: Cargo.toml
server/src/: main.rs  net.rs
server/src/systems/: mod.rs  net.rs  net_items.rs
source-packs/: README.md
source-packs/sound-resource-pack/sound-resource-pack/: pack.mcmeta
