[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/engine-world",
    "crates/engine-render",
    "crates/engine-net",
    "crates/engine-audio",
    "crates/engine-input",
    "crates/engine-assets",
    "crates/game",
    "client",
    "server",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
hecs = "0.10"
wgpu = "24"
winit = "0.30"
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }
crossbeam-channel = "0.5"
rayon = "1.10"
