[package]
name = "client"
version = "0.1.0"
edition.workspace = true

[dependencies]
engine-core = { path = "../crates/engine-core" }
engine-world = { path = "../crates/engine-world" }
engine-render = { path = "../crates/engine-render" }
engine-input = { path = "../crates/engine-input" }
engine-assets = { path = "../crates/engine-assets" }
engine-net = { path = "../crates/engine-net" }
game = { path = "../crates/game" }
winit = { workspace = true }
glam = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
