[package]
name = "client"
version = "0.1.0"
edition.workspace = true
default-run = "client"

[lib]
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "client-diagnose"
path = "src/bin/diagnose.rs"

[dependencies]
engine-core = { path = "../crates/engine-core" }
engine-world = { path = "../crates/engine-world" }
engine-render = { path = "../crates/engine-render" }
engine-input = { path = "../crates/engine-input" }
engine-assets = { path = "../crates/engine-assets" }
engine-net = { path = "../crates/engine-net" }
game = { path = "../crates/game" }
winit = { workspace = true }
glam = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
