[package]
name = "engine-assets"
version = "0.1.0"
edition.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-world = { path = "../engine-world" }
serde = { workspace = true }
toml = { workspace = true }
crossbeam-channel = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = { workspace = true }
zip = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "generate-block-textures"
path = "src/bin/generate_block_textures.rs"

[[bin]]
name = "import-texture-pack"
path = "src/bin/import_texture_pack.rs"
