[package]
name = "engine-net"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
glam = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
