[package]
name = "engine-render"
version = "0.1.0"
edition.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-world = { path = "../engine-world" }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
