[package]
name = "game"
version = "0.1.0"
edition.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-world = { path = "../engine-world" }
engine-assets = { path = "../engine-assets" }
engine-net = { path = "../engine-net" }

glam = { workspace = true }
hecs = { workspace = true }
rand = { workspace = true }
